--- a/.env
+++ b/.env
@@ -3,15 +3,17 @@
 # Cấu hình cho ứng dụng Flask
 FLASK_APP=app.py
 FLASK_ENV=development
-
 # Cấu hình cổng
 FLASK_RUN_PORT=5001
 
 # Cấu hình cơ sở dữ liệu
-DATABASE_URL=postgresql://user:password@localhost:5432/mydatabase
-
-# Các cấu hình khác
-SECRET_KEY=mysecretkey
-
+MONGO_DB_URL=mongodb://localhost:27017/
+MONGO_DB_NAME = model
 #Store dir model
 MODEL_STORAGE_DIR = models
+model_decision_tree_id =  "67074c364b621773f6f3038b"
+model_logistic_id =  "67074c364b621773f6f3038d"
+vector_id = "67074c364b621773f6f30389"
+data_id = "67074a8ca9b6adbdbe7d3b60"
+#Dir tmp
+TMP_DIR = tmp
